<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:netguard="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        android:visible="true"
        netguard:actionViewClass="android.support.v7.widget.SearchView"
        netguard:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_network"
        android:title="@string/menu_network"
        android:visible="false"
        netguard:showAsAction="always" />
    <item
        android:id="@+id/menu_refresh"
        android:visible="false"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/menu_whitelist_wifi"
        android:visible="false"
        android:checkable="true"
        android:title="@string/menu_whitelist_wifi" />
    <item
        android:id="@+id/menu_whitelist_other"
        android:checkable="true"
        android:visible="false"
        android:title="@string/menu_whitelist_other" />
    <item
        android:id="@+id/menu_reset_wifi"
        android:visible="false"
        android:title="@string/menu_reset_wifi" />
    <item
        android:id="@+id/menu_reset_other"
        android:visible="false"
        android:title="@string/menu_reset_other" />
    <item
        android:id="@+id/menu_dark"
        android:checkable="true"
        android:visible="false"
        android:title="@string/menu_dark" />
    <item
        android:id="@+id/menu_vpn_settings"
        android:visible="false"
        android:title="@string/menu_vpn_settings" />
    <item
        android:id="@+id/menu_support"
        android:visible="false"
        android:title="@string/menu_support" />
    <item
        android:id="@+id/menu_about"
        android:visible="false"
        android:title="@string/menu_about" />
</menu>
